feat: allows computer to make a choice

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="">
-    <script src="" async></script>
+    <script src="script.js" async></script>
   </head>
 
   <body>
