--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   </head>
 
   <body>
-    
+    <button class="btn">Rock</button>
+    <button class="btn">Paper</button>
+    <button class="btn">Scissors</button>
   </body>
 </html>
