feat: makes game playable with UI

--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
   </head>
 
   <body>
-    <button class="btn">Rock</button>
-    <button class="btn">Paper</button>
-    <button class="btn">Scissors</button>
+    <div class="btn-div">
+      <button class="btn">Rock</button>
+      <button class="btn">Paper</button>
+      <button class="btn">Scissors</button>
+    </div>
+
+    <div class="results">
+      <p class="score"></p>
+    </div>
   </body>
 </html>
