chore: styles the btn-div and buttons

--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html>
   <head>
     <title>Rock Paper Scissors</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="style.css">
     <script src="script.js" async></script>
   </head>
 
   <body>
     <div class="btn-div">
-      <button class="btn">Rock</button>
-      <button class="btn">Paper</button>
-      <button class="btn">Scissors</button>
+      <button class="btn">✊</button>
+      <button class="btn">👋</button>
+      <button class="btn">✌️</button>
     </div>
 
     <div class="results">
