fix: fixes the event logic for win/lose conditions to work with the added emoji in the button text

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
   <body>
     <div class="btn-div">
-      <button class="btn">✊</button>
-      <button class="btn">👋</button>
-      <button class="btn">✌️</button>
+      <button class="btn">Rock ✊</button>
+      <button class="btn">Paper 👋</button>
+      <button class="btn">Scissors ✌️</button>
     </div>
 
     <div class="results">
