fix: fixes issue where game did not work on first page load

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" async></script>
+    
   </head>
 
   <body>
@@ -17,4 +17,5 @@
       <p class="score"></p>
     </div>
   </body>
+  <script src="script.js"></script>
 </html>
